Fixed more sizing issues of elements being too wide on small screens
Downsized .singleTitle .summaryTitle, h1, h2, and h3 elements so that long, non-breaking words would not cause small screens to scroll horizontally

--- a/style.css
+++ b/style.css
@@ -574,6 +574,22 @@ img[class*='wp-image'] {
     .triangleRight {
         margin-top:135px;
     }
+    
+    .singleTitle, .summaryTitle {
+        font-size: 1.25em;
+    }
+    
+    h1 {
+        font-size:1.25em;
+    }
+    
+    h2 {
+        font-size:1.15em;
+    }
+    
+    h3 {
+        font-size:1.05em;
+    }
 
     .footer {
         font-size:.6em
